# fi-claude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: date_conventions.md  math.md
notebooks/: brl_pre_cdi_market_data.ipynb  inflation_bond_tips.ipynb  xccy_swap_demo.ipynb
src/fi_claude/: __init__.py
src/fi_claude/curves/: __init__.py  bootstrap.py  day_count.py  interpolation.py
src/fi_claude/data/: __init__.py  common.py  curves.py  instruments.py  market.py  results.py
src/fi_claude/market/: __init__.py  snapshots.py
src/fi_claude/pricers/: __init__.py  brl_pre_cdi.py  inflation_bond.py  mxn_tiie.py  tba.py  xccy_basis_swap.py
src/fi_claude/risk/: __init__.py  cashflow_report.py  seasoning.py  sensitivities.py  shocks.py
src/fi_claude/utils/: __init__.py
tests/: conftest.py
tests/curves/: test_bootstrap.py  test_day_count.py  test_interpolation.py
tests/data/: test_models.py
tests/market/: test_snapshots.py
tests/pricers/: test_brl_pre_cdi.py  test_inflation_bond.py  test_mxn_tiie.py  test_tba.py
tests/risk/: test_cashflow_report.py  test_seasoning.py  test_shocks.py
